--- a/tasks/install_yum.yml
+++ b/tasks/install_yum.yml
@@ -1,7 +1,6 @@
 ---
-- name: Install Kibana
+- name: Install Filebeat
   become: true
   yum:
-    name: "/tmp/kibana-{{ kibana_version }}-x86_64.rpm"
+    name: "/tmp/filebeat-{{ filebeat_version }}-x86_64.rpm"
     state: present
-  notify: restart Kibana
