--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -5,3 +5,18 @@
     src: filebeat.yml.j2
     dest: /etc/filebeat/filebeat.yml
     mode: 0644
+- name: Set filebeat systemwork
+  become: true
+  command:
+    cmd: filebeat modules enable system
+    chdir: /usr/share/filebeat/bin
+  register: filebeat_modules
+  changed_when: filebeat_modules.stdout != 'Module system is already enabled'
+- name: Load Kibana dashboard
+  become: true
+  command:
+    cmd: filebeat setup
+    chdir: /usr/share/filebeat/bin
+  register: filebeat_setup
+  changed_when: false
+  until: filebeat_setup is succeeded
