--- a/tasks/download_apt.yml
+++ b/tasks/download_apt.yml
@@ -2,7 +2,7 @@
 - name: "Download Filebeat's deb"
   get_url:
     url: "https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-{{ filebeat_version }}-amd64.deb"
-    dest: "/files/filebeat-{{ filebeat_version }}-amd64.deb"
+    dest: "files/filebeat-{{ filebeat_version }}-amd64.deb"
   delegate_to: localhost
   register: download_filebeat
   until: download_filebeat is succeeded
