--- a/tasks/download_yum.yml
+++ b/tasks/download_yum.yml
@@ -2,7 +2,7 @@
 - name: "Download Kibana's rpm"
   get_url:
     url: "https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-{{ filebeat_version }}-x86_64.rpm"
-    dest: "/tmp/filebeat-{{ filebeat_version }}-x86_64.rpm"
+    dest: "files/filebeat-{{ filebeat_version }}-x86_64.rpm"
   register: download_filebeat
   delegate_to: localhost
   until: download_filebeat is succeeded
