--- a/tasks/install_yum.yml
+++ b/tasks/install_yum.yml
@@ -4,3 +4,14 @@
   yum:
     name: "/tmp/filebeat-{{ filebeat_version }}-x86_64.rpm"
     state: present
+- name: install EPEL repo
+  become: true
+  yum:
+    name: epel-release
+    state: present
+- name: Install Nginx Web Server on RedHat Family
+  become: true
+  yum:
+    name: nginx
+    state: latest
+  notify: nginx systemd
