--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,3 +4,8 @@
   service:
     name: filebeat
     state: restarted
+- name: nginx systemd
+  systemd:
+    name: nginx
+    enabled: yes
+    state: restarted
